# au-grants-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  start.sh
profiles/: example_university.yaml
src/au_grants_agent/: __init__.py  analytics.py  api.py  cli.py  config.py  dashboard.py  database.py  models.py  notify.py  scheduler.py  web.py
src/au_grants_agent/crawler/: __init__.py  arc.py  arena.py  base.py  business_gov.py  grants_gov.py  nhmrc.py  nsw_gov.py  parsers.py
src/au_grants_agent/proposal/: __init__.py  exporter.py  generator.py  matcher.py  profiles.py  report.py  template_library.py  templates.py  validator.py
src/au_grants_agent/utils/: logger.py
tests/: test_crawlers.py  test_matcher.py  test_parsers.py  test_validator.py
